[tech] update cors mapping + update DTOs to enable communication between back and front